--- a/Csc.html
+++ b/Csc.html
@@ -14,7 +14,7 @@ Aquí compartiremos ideas y creceremos juntos.
 Recuerden que cada pregunta es importante.
 Disfrutemos el viaje del conocimiento.</p>
 
-<p id="P">Este salón será un lugar seguro.  
+<p class="Principal">Este salón será un lugar seguro.  
 Un espacio donde preguntar está bien.  
 Donde la creatividad es bienvenida.  
 Donde la motivación se multiplica.  
