--- a/Csc.html
+++ b/Csc.html
@@ -4,17 +4,17 @@
        <meta charset="UTF-8">
        <title>Index.html</title>
          <meta charset="UTF-8">
-       <link rel="stylesheet" href="Fuentes.css">
+       <link rel="stylesheet" href="Estilos.css">
    </head>
 
    <body>
     <h1 id="titulo">Benvinguts a CSS bàsic</h1>
-    <p id="textoimportante">Hoy inicia un nuevo camino de aprendizaje.
+    <p class="Texto_importante">Hoy inicia un nuevo camino de aprendizaje.
 Aquí compartiremos ideas y creceremos juntos.
 Recuerden que cada pregunta es importante.
 Disfrutemos el viaje del conocimiento.</p>
 
-<p class="Principal">Este salón será un lugar seguro.  
+<p class="Gran and negreta and subrayat">Este salón será un lugar seguro.  
 Un espacio donde preguntar está bien.  
 Donde la creatividad es bienvenida.  
 Donde la motivación se multiplica.  
