--- a/Contacte.html
+++ b/Contacte.html
@@ -9,7 +9,7 @@
    <h1>Contacto</h1>
    </head>
    <body>
-       <p class="Contacte">Bienvenidos a mi àgina de contactos aquì podràn encontrar informacion personal mia, por si tienen alguna duda.</p>
+       <p class="Contacte and Decoracion">Bienvenidos a mi àgina de contactos aquì podràn encontrar informacion personal mia, por si tienen alguna duda.</p>
 <p class="Azul"> Cosas importantes</p>
 <ul>
          <li>Contacto personal</li>
