--- a/Csc.html
+++ b/Csc.html
@@ -9,12 +9,12 @@
 
    <body>
     <h1 id="titulo">Benvinguts a CSS bàsic</h1>
-    <p class="Texto_importante">Hoy inicia un nuevo camino de aprendizaje.
+    <p class="Texto_importante and Decoracion">Hoy inicia un nuevo camino de aprendizaje.
 Aquí compartiremos ideas y creceremos juntos.
 Recuerden que cada pregunta es importante.
 Disfrutemos el viaje del conocimiento.</p>
 
-<p class="Gran and negreta and subrayat">Este salón será un lugar seguro.  
+<p class="Gran and negreta and subrayat and Decoracion">Este salón será un lugar seguro.  
 Un espacio donde preguntar está bien.  
 Donde la creatividad es bienvenida.  
 Donde la motivación se multiplica.  
@@ -38,9 +38,9 @@ Lo que importa es la actitud.</p>
     
 <h2> Wikipedia </h2>
 
-<a href="https://www.wikipedia.org" target="_blank">Para màs informaciòn</a>
+<a href="https://www.wikipedia.org" target="_blank">Para màs informaciòn</a> 
 
-<p class= "hover-text"> </p>
+
      
 <p>
   <a href="Contacte.html">Mi informaciòn de contacto</a>
