--- a/Contacte.html
+++ b/Contacte.html
@@ -6,11 +6,11 @@
        <meta charset="UTF-8">
        <link rel="stylesheet" href="Estilos.css">
    </head>
-   <h1>Contacto</h1>
+   <h1 class="subrayat">Contacto</h1>
    </head>
    <body>
-       <p class="Contacte and Decoracion">Bienvenidos a mi àgina de contactos aquì podràn encontrar informacion personal mia, por si tienen alguna duda.</p>
-<p class="Azul"> Cosas importantes</p>
+       <p class="Contacte and Decoracion and P">Bienvenidos a mi àgina de contactos aquì podràn encontrar informacion personal mia, por si tienen alguna duda.</p>
+<p class="Azul and negreta and subrayat"> Cosas importantes</p>
 <ul>
          <li>Contacto personal</li>
          
@@ -30,7 +30,7 @@
 
 </ol>
 
-<a href="Csc.html">Volver a la pàgina principal</a>
+<a href="Csc.html" class="hover-text" target="_blank">Volver a la pàgina principal </a>
 
 
 
