--- a/Contacte.html
+++ b/Contacte.html
@@ -20,7 +20,7 @@
 
 </ul>
 
-<h1>Objetivos de aprendizaje</h1>
+<h1 class= "subrayat">Objetivos de aprendizaje</h1>
 <ol>
 <li>Aprender de la mejor forma posible</li>
 <li>Lograr que se cumpla el propòsito por el cual estas aquì</li>
